Replace sortAttrs with convertIdsToClassesAndSort

--- a/.svgo.yml
+++ b/.svgo.yml
@@ -43,5 +43,5 @@ plugins:
   - cleanupIDs
   - removeUnusedNS
   - transformsWithOnePath
-  - sortAttrs
+  - convertIdsToClassesAndSort
   - removeTitle
